# ide-ai-benchmark

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  config.ini  docker-compose.yml  install.py  pyproject.toml  pytest.ini
.github/workflows/: test.yml
docs/: DOCKER_SETUP.md
scripts/: download-cursor.sh  run-tests-docker.sh  run_tests.py  verify_environment.py
src/: __init__.py  cursor_automation.py  ide_automation.py
tests/: __init__.py  conftest.py  test_basic_functionality.py  test_performance_benchmarks.py  test_user_workflows.py
